SLCORE-1775 Remove deprecated FeatureFlagsDto